--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
 
     <body>
-        <h2>Ingrese Persona</h2>
-        <form action="/api/personas" method="POST">
-            Nombre: <input type="text" name="nombre">
-            Apellido: <input type="text" name="apellido">
-            Edad: <input type="text" name="edad">
-            <button>Enviar</button>
+        <h2>Ingrese Producto</h2>
+        <form action="/api/productos" method="POST">
+            Title: <input type="text" name="title" /> Price:
+            <input type="text" name="price" /> Thumbnail:
+            <input type="text" name="thumbnail" />
+            <button>Agregar</button>
         </form>
     </body>
 
