--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <body>
         <h2>Ingrese Producto</h2>
         <form action="/api/productos" method="POST">
-            Title: <input type="text" name="title" /> Price:
-            <input type="text" name="price" /> Thumbnail:
-            <input type="text" name="thumbnail" />
+            Title: <input type="text" name="title" />
+            Price: <input type="text" name="price" />
+            Thumbnail: <input type="text" name="thumbnail" />
             <button>Agregar</button>
         </form>
     </body>
