--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,15 @@
     </head>
 
     <body>
-        <h2>Ingrese Producto</h2>
+        <h2>Probar con Postman :)</h2>
+        <p>Ajuste nivel de user: folder 'data' -> archivo 'userLevel.js'</p>
+        <!-- <h2>Ingrese Producto</h2>
         <form action="/api/productos" method="POST">
             Title: <input type="text" name="title" />
             Price: <input type="text" name="price" />
             Thumbnail: <input type="text" name="thumbnail" />
             <button>Agregar</button>
-        </form>
+        </form> -->
     </body>
 
 </html>
