Productos - POST - grabando a archivo

--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,20 @@
     </head>
 
     <body>
-        <h2>Probar con Postman :)</h2>
-        <p>Ajuste nivel de user: folder 'data' -> archivo 'userLevel.js'</p>
-        <!-- <h2>Ingrese Producto</h2>
+        <p>Ajuste nivel de user: folder 'data' - archivo 'userLevel.js'</p>
+        <hr>
+        <h2>GET y GET/:id - Probar con Postman</h2>
+        <hr>
+        <h2>POST - administradores</h2>
         <form action="/api/productos" method="POST">
-            Title: <input type="text" name="title" />
-            Price: <input type="text" name="price" />
-            Thumbnail: <input type="text" name="thumbnail" />
-            <button>Agregar</button>
-        </form> -->
+            Nombre: <input type="text" name="nombre" />
+            Descripción: <input type="text" name="descripcion" />
+            Código: <input type="text" name="codigo" />
+            Foto: <input type="text" name="url" />
+            Precio: <input type="number" name="precio" />
+            Stock: <input type="number" name="stock" />
+            <input type="submit" value="Agregar">
+        </form>
     </body>
 
 </html>
