Trabajo en updateProduct

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <body>
         <p>Ajuste nivel de user: folder 'data' - archivo 'userLevel.js'</p>
         <hr>
-        <h2>GET y GET/:id - Probar con Postman</h2>
+        <h2>GET, GET/:id, PUT/:id - Probar con Postman</h2>
         <hr>
         <h2>POST - administradores</h2>
         <form action="/api/productos" method="POST">
